# heliage-advance

./: .gitmodules  CMakeLists.txt  LICENSE
src/: arm7.cpp  arm7.h  arm7_disassembler.cpp  arm7_swi.cpp  bios.cpp  bios.h  bus.cpp  bus.h  cartridge.cpp  cartridge.h  gba.cpp  gba.h  interrupts.h  keypad.h  logging.h  main.cpp  mmu.cpp  mmu.h  ppu.cpp  ppu.h  timer.cpp  timer.h  types.h
src/arm7/: arm7.cpp  arm7.h  disassembler.cpp
src/arm7/arm/: arm.cpp  branch.cpp  data_processing.cpp  psr_transfer.cpp  swi.cpp
src/arm7/thumb/: branch.cpp  thumb.cpp
src/common/: bits.h  defines.h  logging.h  types.h
src/frontend/: frontend.h  null.cpp  null.h  sdl.cpp  sdl.h
